@@ -425,12 +425,13 @@ fluid.soundfont =
 #                                 220h to 2E0h are for use with IBM PC Sound Blaster emulation.
 #                                 D2h to DEh are for use with NEC PC-98 Sound Blaster 16 emulation.
 #                                 Possible values: 220, 240, 260, 280, 2a0, 2c0, 2e0, d2, d4, d6, d8, da, dc, de.
-#                          irq: The IRQ number of the Sound Blaster. Set to -1 to start DOSBox-X with the IRQ unassigned
-#                                 Possible values: 7, 5, 3, 9, 10, 11, 12.
+#                          irq: The IRQ number of the Sound Blaster (usually 5 or 7, depending on the sound card type and the game).
+#                                 Set to 0 for the default setting of the sound card, or set to -1 to start DOSBox-X with the IRQ unassigned.
+#                                 Possible values: 7, 5, 3, 9, 10, 11, 12, 0, -1.
 #                          dma: The DMA number of the Sound Blaster. Set to -1 to start DOSBox-X with the DMA unassigned
-#                                 Possible values: 1, 5, 0, 3, 6, 7.
+#                                 Possible values: 1, 5, 0, 3, 6, 7, -1.
 #                         hdma: The High DMA number of the Sound Blaster. Set to -1 to start DOSBox-X with the High DMA unassigned
-#                                 Possible values: 1, 5, 0, 3, 6, 7.
+#                                 Possible values: 1, 5, 0, 3, 6, 7, -1.
 #               enable speaker: Start the DOS virtual machine with the Sound Blaster speaker enabled.
 #                                 Sound Blaster Pro and older cards have a speaker disable/enable command.
 #                                 Normally the card boots up with the speaker disabled. If a DOS game or demo
