@@ -1260,8 +1260,9 @@ fluid.chorus.type       = 0
 #                                                     220h to 2E0h are for use with IBM PC Sound Blaster emulation.
 #                                                     D2h to DEh are for use with NEC PC-98 Sound Blaster 16 emulation.
 #                                                     Possible values: 220, 240, 260, 280, 2a0, 2c0, 2e0, d2, d4, d6, d8, da, dc, de.
-#                                              irq: The IRQ number of the Sound Blaster. Set to -1 to start DOSBox-X with the IRQ unassigned
-#                                                     Possible values: 7, 5, 3, 9, 10, 11, 12.
+#                                              irq: The IRQ number of the Sound Blaster (usually 5 or 7, depending on the sound card type and the game).
+#                                                     Set to 0 for the default setting of the sound card, or set to -1 to start DOSBox-X with the IRQ unassigned.
+#                                                     Possible values: 7, 5, 3, 9, 10, 11, 12, 0, -1.
 #                                           mindma: Minimum DMA transfer left to increase attention across DSP blocks, in milliseconds. Set to -1 for default.
 #                                                     There are some DOS games/demos that use single-cycle DSP playback in their music tracker and they micromanage
 #                                                     the DMA transfer per block poorly in a way that causes popping and artifacts. Setting this option to 0 for
@@ -1270,9 +1271,9 @@ fluid.chorus.type       = 0
 #                                                         none                   Emulate IRQs normally
 #                                                         cs_equ_ds              Do not fire IRQ unless two CPU segment registers match: CS == DS. Read DOSBox-X Wiki or source code for details.
 #                                              dma: The DMA number of the Sound Blaster. Set to -1 to start DOSBox-X with the DMA unassigned
-#                                                     Possible values: 1, 5, 0, 3, 6, 7.
+#                                                     Possible values: 1, 5, 0, 3, 6, 7, -1.
 #                                             hdma: The High DMA number of the Sound Blaster. Set to -1 to start DOSBox-X with the High DMA unassigned
-#                                                     Possible values: 1, 5, 0, 3, 6, 7.
+#                                                     Possible values: 1, 5, 0, 3, 6, 7, -1.
 #                              dsp command aliases: If set (on by default), emulation will support known undocumented aliases
 #                                                     of common Sound Blaster DSP commands. Some broken DOS games and demos rely on these aliases.
 #                                                     For more information: https://www.vogons.org/viewtopic.php?f=62&t=61098&start=280
