@@ -34,6 +34,10 @@
     between DBCS and SBCS modes temporarily. (Wengier)
   - Command-line option -fastlaunch will now suppress
     messages by "automountall=true" option. (Wengier)
+  - Setting "irq" to "0" in [sblaster] section of the
+    config file will use the default IRQ number for the
+    sound card type. Also fixed "irq=-1", "dma=-1" and
+    "hdma=-1" not working as desired. (Wengier)
   - The return value of AL in Int21/AX=0Eh is no longer
     fixed. The game Jurassic Park may run after moving
     Z drive to a different letter (e.g. E:). (Wengier)
